Remove button feature fixed. Data-index of elements now resets each time after remove button is pressed so that it aligns with their index number in the array where the books are stored. Status button feature needs to be completed.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-.table-container {
+.table-container, 
+.book-row-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 0.5fr;
     justify-items: center;
